<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="application_settings"
        app:layout="@layout/preference_category"
        app:title="@string/caption_applicationsettings" >

        <SwitchPreferenceCompat
            app:key="@string/settings_key_dark_mode"
            app:title="@string/text_enable_darkmode"
            app:icon="@drawable/ic_darkmode" />

        <SwitchPreferenceCompat
            app:key="@string/settings_key_fahrenheit"
            app:title="@string/text_use_fahrenheit"
            app:icon="@drawable/ic_fahrenheit"
            app:summaryOff="@string/text_summary_off_fahrenheit"
            app:summaryOn="@string/text_summary_on_fahrenheit"/>
    </PreferenceCategory>
</PreferenceScreen>
