<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item android:id="@+id/search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="EmptySubmitSearchView" />

    <item android:id="@+id/sortingButton"
        android:icon="@drawable/ic_sorting"
        android:title="@string/caption_sorting"
        app:showAsAction="always" />

    <item android:id="@+id/settingsButton"
        android:icon="@drawable/ic_settings"
        android:title="@string/caption_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>