<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/textView_humidity_verydry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/caption_verydry"
         />

    <TextView
        android:id="@+id/textView_humidity_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/caption_average_normal"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView_humidity_veryhumid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/caption_veryhumid"
        android:textAlignment="viewEnd" />

</LinearLayout>