<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@android:id/switch_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/caption_campus_b"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"/>

    <Switch

        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/caption_campus_l"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        />

    <Switch

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/caption_campus_m"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        />
</LinearLayout>