<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="70dp"
    android:paddingEnd="30dp"
    android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView_wlan_verybad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/caption_verybad"
            />

        <TextView
            android:id="@+id/textView_wlan_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/caption_average_middle"
            android:textAlignment="center"
            />

    <TextView
        android:id="@+id/textView_wlan_excellent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/caption_excellent"
        android:textAlignment="viewEnd"
        />
</LinearLayout>