<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="11dp"
    tools:context=".RoomCard">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_marginStart="50dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/recommendationImage"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="7dp">

            <TextView
                android:id="@+id/roomName"
                style="@style/CI_UDE_TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iconTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_temperature_description"
                android:elevation="7dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_temperature"
                app:layout_constraintBottom_toBottomOf="@+id/roomTemp"
                app:layout_constraintStart_toStartOf="@id/roomName"
                app:layout_constraintTop_toTopOf="@id/roomTemp" />

            <TextView
                android:id="@+id/roomTemp"
                style="@style/CI_UDE_TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/iconTemp"
                app:layout_constraintTop_toBottomOf="@id/roomName" />

            <ImageView
                android:id="@+id/iconHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:contentDescription="@string/icon_humidity_description"
                android:elevation="7dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_humidity"
                app:layout_constraintBottom_toBottomOf="@id/roomHumidity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/roomHumidity" />

            <TextView
                android:id="@+id/roomHumidity"
                style="@style/CI_UDE_TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/iconHumidity"
                app:layout_constraintTop_toTopOf="@id/roomTemp" />

            <ImageView
                android:id="@+id/iconWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_WiFi_description"
                android:elevation="7dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_wifi"
                app:layout_constraintBottom_toBottomOf="@id/roomWifiSignalStrength"
                app:layout_constraintStart_toStartOf="@id/iconTemp"
                app:layout_constraintTop_toTopOf="@id/roomWifiSignalStrength" />

            <TextView
                android:id="@+id/roomWifiSignalStrength"
                style="@style/CI_UDE_TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/iconWifi"
                app:layout_constraintTop_toBottomOf="@id/roomTemp" />

            <ImageView

                android:id="@+id/iconNoise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_noise_description"
                android:elevation="7dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_noise"
                app:layout_constraintBottom_toBottomOf="@id/roomNoiseLevel"
                app:layout_constraintStart_toStartOf="@id/iconHumidity"
                app:layout_constraintTop_toTopOf="@id/roomNoiseLevel" />

            <TextView
                android:id="@+id/roomNoiseLevel"
                style="@style/CI_UDE_TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/iconNoise"
                app:layout_constraintTop_toTopOf="@id/roomWifiSignalStrength" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/recommendationImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/caption_recommendation"
        android:elevation="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>